# web_lab3

./: Cargo.toml
doc/: book.toml
doc/src/: SUMMARY.md
doc/src/API/: api.md
src/: config.rs  main.rs
src/entries/: employee.rs  mod.rs  projects.rs
src/front/: index.html  master.css  scripts.js  structs.js
src/http/: employee.rs  mod.rs  projects.rs  utils.rs
src/postgress/: migrator.rs  mod.rs
src/postgress/entries/: employees.rs  mod.rs  progect.rs  progects.rs
src/postgress/migrations/: m20231018_000001_create_employee.rs  m20231018_000002_create_projects.rs  mod.rs
