[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws", "tracing"] }
axum-util = "0.2.2"
chrono = { version = "0.4.31", features = ["serde"] }
log = "0.4.20"
sea-orm = { version = "0.12.3", features = ["runtime-tokio-native-tls", "with-chrono", "with-uuid", "postgres-array", "sqlx-postgres"] }
sea-orm-migration = "0.12.3"
sea-query = { version = "0.30.2", default-features = false, features = [
    "backend-postgres",
    "derive",
    "thread-safe",
    "with-chrono",
    "with-uuid",
] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.5"
tower-http =  { version = "0.4.4", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
